--- a/core/template/core/base.html
+++ b/core/template/core/base.html
@@ -17,7 +17,7 @@
 
     <!-- Custom fonts for this template -->
     <link href="{% static 'core/vendor/fontawesome-free/css/all.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'core/css/perso.css' %}" rel="stylesheet" type="text/css">
+
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
@@ -26,6 +26,9 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'core/css/creative.min.css' %}" rel="stylesheet">
+
+    <!-- My own stuff -->
+    <link href="{% static 'core/css/perso.css' %}" rel="stylesheet" type="text/css">
 
   </head>
 
@@ -58,31 +61,21 @@
 
         {% block content %}{% endblock %}
 
+    <footer>
 
+     <nav class="footer_perso">
+        <ul class="ul_footer">
+            <li class="element">
+              <a class="" href="#about">Mentions legales</a>
+            </li>
+            <li class="element">
+              <a class="" href="#contact">Contact</a>
+            </li>
+          </ul>
+    </nav>
 
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
-            <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
-            <p>123-456-6789</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
-            <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    </footer>
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'core/vendor/jquery/jquery.js' %}"></script>
