new page creationde compte

--- a/compte/template/compte/creation_compte.html
+++ b/compte/template/compte/creation_compte.html
@@ -10,11 +10,11 @@
                     <label for="name" class="control-label"></label>
                     <input type="text" placeholder="Votre email" name="login" value="" id="login">
                     <input type="password" name="password" value="" id="password">
-                  <button type="submit" class="btn btn-primary btn-xl js-scroll-trigger">Login</button>
+                    <input type="password" name="password_check" value="" id="password">
+                  <button type="submit" class="btn btn-primary btn-xl js-scroll-trigger">Creer mon compte</button>
                   </div>
               </form>
 
 
-              <a href="creation" class="btn btn-primary btn-xl js-scroll-trigger">Nouveau compte</a>
 
     {% endblock %}
