--- a/core/static/core/css/perso.css
+++ b/core/static/core/css/perso.css
@@ -17,9 +17,24 @@
 	flex: 40%;
 	max-width: 40%;
 	margin: auto;
+    max-height: 100px;
 
 
 }
+
+
+.resize_image /*!  wrap :mettre le rat en dessous   */
+
+{
+   display: flex; 
+    flex-wrap: wrap;
+	margin: auto;
+    max-height: 100px;
+
+
+}
+
+
 
 .resize_logo
 
@@ -42,7 +57,13 @@
 .footer_perso
 {
 border-top:1px solid black;
+background-color:cadetblue;
+height: 10px;
+
+
 }
+
+
 
 .ul_footer
 {
