--- a/core/template/core/accueil2.html
+++ b/core/template/core/accueil2.html
@@ -28,34 +28,35 @@
       </div>
     </header>
 
+     <section class= >
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="section-heading">Colette et Remy</h2>
+
+            <p class=>Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà certainement rencontrés dans notre excellent restaurant Ratatouille. </p>
+            <p>Colette Tatou : "Nous aimons tous manger, surtout en France ! Personnellement, une baguette fraîche, du bon fromage de chèvre et un bon vin rouge me suffisent amplement. Comme tout le monde, je fais mes courses au supermarché. Mais petit à petit je me suis rendue compte, surtout lorsque nous avons ouvert le restaurant, que je pouvais remplacer les produits aseptisés que j'avais l'habitude d'acheter par de bons produits du terroir Et souvent pour le même prix !"</p>
+            <p>Remy : "Pour ma part je me rendais déjà dans bien des magasins car j'aime beaucoup me balader, surtout dans les caves et les cuisines. Je connaissais par coeur le contenu des boutiques bio (dont je raffole) ainsi que les ingrédients de tous les aliments vendus. Lorsque Colette m'a demandé si elle pouvait remplacer son Nutella matinal par un aliment plus sain, je savais tout de suite où le trouver. L'idée de Pur Beurre était née !"</p>
+
+          </div>
+        </div>
 
       <div class="container my-auto">
-
-        <h2 class="section-heading">Colette et Remy</h2>
-
-
-        <p class="text-faded mb-5">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà certainement rencontrés dans notre excellent restaurant Ratatouille. </p>
-
-        <p>Colette Tatou : "Nous aimons tous manger, surtout en France ! Personnellement, une baguette fraîche, du bon fromage de chèvre et un bon vin rouge me suffisent amplement. Comme tout le monde, je fais mes courses au supermarché. Mais petit à petit je me suis rendue compte, surtout lorsque nous avons ouvert le restaurant, que je pouvais remplacer les produits aseptisés que j'avais l'habitude d'acheter par de bons produits du terroir Et souvent pour le même prix !"</p>
-
-
-        <p>Remy : "Pour ma part je me rendais déjà dans bien des magasins car j'aime beaucoup me balader, surtout dans les caves et les cuisines. Je connaissais par coeur le contenu des boutiques bio (dont je raffole) ainsi que les ingrédients de tous les aliments vendus. Lorsque Colette m'a demandé si elle pouvait remplacer son Nutella matinal par un aliment plus sain, je savais tout de suite où le trouver. L'idée de Pur Beurre était née !"</p>
-
-
+        <div class="row">
+          <div class="resize_image">
+            <img class="col-lg-3" src="{{ MEDIA_URL }}colette-4.jpg" alt="Photo de colette" />
+            <img class="col-lg-3" src="{{ MEDIA_URL }}remy-8.jpg" alt="Photo de remy" />
+          </div>
+       </div>
+       </div>
       </div>
-
-      <div class="resize_image_accueil">
-
-        <img class="" src="{{ MEDIA_URL }}colette-4.jpg" alt="Photo de colette" />
-        <img class="" src="{{ MEDIA_URL }}remy-8.jpg" alt="Photo de remy" />
-
-      </div>
+    </section>
 
     <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Contactez-nous !</h2>
+            <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
             <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
           </div>
