--- a/core/template/core/base.html
+++ b/core/template/core/base.html
@@ -42,7 +42,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="{% url 'compte:acceuil' %}">
+                  <img class="resize_logo" src="{{ MEDIA_URL }}carrot.png" alt="Mes aliments" /></a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
@@ -51,7 +52,8 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="{% url 'compte:acceuil' %}">
+                  <img class="resize_logo" src="{{ MEDIA_URL }}logout.png" alt="Mes aliments" /></a>
             </li>
           </ul>
         </div>
@@ -63,17 +65,18 @@
 
     <footer>
 
-     <nav class="footer_perso">
-        <ul class="ul_footer">
-            <li class="element">
-              <a class="" href="#about">Mentions legales</a>
-            </li>
-            <li class="element">
-              <a class="" href="#contact">Contact</a>
-            </li>
-          </ul>
-    </nav>
-
+    <section class="footer_perso">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 text-center">
+             <a class="" href="{% url "mentions_legales" %}">Mentions legales</a>
+          </div>
+          <div class="col-lg-6 col-md-12 text-center">
+             <a class="" href="{% url "contact" %}">Contact</a>
+          </div>
+        </div>
+      </div>
+    </section>
     </footer>
 
 
